@@ -1,7 +1,7 @@
 package me.mykindos.betterpvp.core.client.repository;
 
+import com.github.benmanes.caffeine.cache.Cache;
 import com.github.benmanes.caffeine.cache.Caffeine;
-import com.github.benmanes.caffeine.cache.LoadingCache;
 import com.github.benmanes.caffeine.cache.RemovalCause;
 import com.github.benmanes.caffeine.cache.Scheduler;
 import com.google.inject.Inject;
@@ -14,6 +14,7 @@ import me.mykindos.betterpvp.core.client.events.AsyncClientLoadEvent;
 import me.mykindos.betterpvp.core.client.events.AsyncClientPreLoadEvent;
 import me.mykindos.betterpvp.core.client.events.ClientUnloadEvent;
 import me.mykindos.betterpvp.core.client.gamer.Gamer;
+import me.mykindos.betterpvp.core.redis.Redis;
 import me.mykindos.betterpvp.core.utilities.UtilMessage;
 import me.mykindos.betterpvp.core.utilities.UtilServer;
 import me.mykindos.betterpvp.core.utilities.model.manager.PlayerManager;
@@ -22,7 +23,6 @@ import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -39,36 +39,47 @@ import java.util.stream.Collectors;
 public class ClientManager extends PlayerManager<Client> {
 
     public static final long TIME_TO_LIVE = TimeUnit.MINUTES.toMillis(5);
-    public static final Object CACHE_DUMMY = new Object();
 
-    private final LoadingCache<Client, Object> store; // supposedly thread-safe?
-    private final ClientSQLLayer sql;
-    private final ClientRedisLayer redis;
+    private final Cache<UUID, Client> store; // supposedly thread-safe?
+    private final ClientSQLLayer sqlLayer;
+    private final ClientRedisLayer redisLayer;
+    private final Redis redis;
 
     @Inject
-    public ClientManager(Core plugin, ClientSQLLayer sql, ClientRedisLayer redis) {
+    public ClientManager(Core plugin, Redis redis) {
         super(plugin);
-        this.sql = sql;
+        this.sqlLayer = plugin.getInjector().getInstance(ClientSQLLayer.class);
         this.redis = redis;
-        this.redis.getObserver().register(this::receiveUpdate);
+        if (redis.isEnabled()) {
+            this.redisLayer = plugin.getInjector().getInstance(ClientRedisLayer.class);
+            this.redisLayer.getObserver().register(this::receiveUpdate);
+        } else {
+            this.redisLayer = null;
+        }
 
         this.store = Caffeine.newBuilder()
                 .scheduler(Scheduler.systemScheduler())
                 .expireAfter(new ClientExpiry())
-                .removalListener((final Client unloaded, final Object value, final RemovalCause cause) -> {
-                    if (unloaded == null) {
+                .removalListener((final UUID uuid, final Client client, final RemovalCause cause) -> {
+                    if (uuid == null || client == null) {
                         return;
                     }
 
-                    Bukkit.getScheduler().runTask(plugin, () -> UtilServer.callEvent(new ClientUnloadEvent(unloaded)));
-                    
+                    Bukkit.getScheduler().runTask(plugin, () -> UtilServer.callEvent(new ClientUnloadEvent(client)));
+
                     // Only announce the client was unloaded if it expired or was removed forcefully, not replaced.
                     // It won't be removed by size because we didn't set a maximum size.
-                    if (cause == RemovalCause.EXPIRED || cause == RemovalCause.EXPLICIT || cause == RemovalCause.COLLECTED) {
-                        log.info(UNLOAD_ENTITY_FORMAT, unloaded.getName());
+                    if (client.isLoaded() && (cause == RemovalCause.EXPIRED || cause == RemovalCause.EXPLICIT || cause == RemovalCause.COLLECTED)) {
+                        log.info(UNLOAD_ENTITY_FORMAT, client.getName());
                     }
                 })
-                .build(key -> CACHE_DUMMY);
+                .build();
+    }
+
+    public void shutdown() {
+        if (this.redis.isEnabled()) {
+            this.redisLayer.getObserver().shutdown();
+        }
     }
 
     public void sendMessageToRank(String prefix, Component message, Rank rank) {
@@ -94,8 +105,10 @@ public class ClientManager extends PlayerManager<Client> {
 
         // Adding into storage because no existing client was present.
         Bukkit.getPluginManager().callEvent(new AsyncClientPreLoadEvent(client)); // Call event after a client is loaded
-        this.store.get(client);
-        this.redis.save(client);
+        load(client);
+        if (this.redis.isEnabled()) {
+            this.redisLayer.save(client);
+        }
 
         // Executing our success callback
         Bukkit.getPluginManager().callEvent(new AsyncClientLoadEvent(client)); // Call event after a client is loaded
@@ -105,9 +118,16 @@ public class ClientManager extends PlayerManager<Client> {
     }
 
     @Override
+    protected void load(Client entity) {
+        this.store.put(entity.getUniqueId(), entity);
+    }
+
+    @Override
     protected void unload(final Client client) {
-        this.redis.save(client);
-        this.store.invalidate(client);
+        if (this.redis.isEnabled()) {
+            this.redisLayer.save(client);
+        }
+        this.store.invalidate(client.getUniqueId());
     }
 
     // Override to allow classes in the same package to access
@@ -118,19 +138,24 @@ public class ClientManager extends PlayerManager<Client> {
 
     @Override
     protected void loadOnline(final UUID uuid, final String name, final Consumer<Optional<Client>> callback) {
-        final Optional<Client> storedUser = this.getStoredUser(stored -> stored.getUniqueId().equals(uuid));
+        final Optional<Client> storedUser = this.getStoredExact(uuid);
         if (storedUser.isPresent()) {
             callback.accept(storedUser);
             return;
         }
 
         // Attempting to load a brand-new client
-        Optional<Client> loaded = this.redis.getAndUpdate(uuid, name).or(() -> this.sql.getAndUpdate(uuid, name));
+        Optional<Client> loaded;
+        if (this.redis.isEnabled()) {
+            loaded = this.redisLayer.getAndUpdate(uuid, name).or(() -> this.sqlLayer.getAndUpdate(uuid, name));
+        } else {
+            loaded = this.sqlLayer.getAndUpdate(uuid, name);
+        }
 
         // If the client is empty, that means they don't exist in redis or the database.
         // Attempt to create a new client in the database.
         if (loaded.isEmpty()) {
-            loaded = Optional.of(this.sql.create(uuid, name));
+            loaded = Optional.of(this.sqlLayer.create(uuid, name));
         }
 
         // Attempt to store the client in the cache.
@@ -138,7 +163,7 @@ public class ClientManager extends PlayerManager<Client> {
         this.storeNewClient(loaded.get(), client -> callback.accept(Optional.of(client)), true);
     }
 
-    protected void loadOffline(final Predicate<Client> searchStorageFilter,
+    protected void loadOffline(final Supplier<Optional<Client>> searchStorageFilter,
                                final Supplier<Optional<Client>> loader,
                                final Consumer<Optional<Client>> callback) {
         // If the client is already loaded, then we will return that instead of loading it again.
@@ -147,7 +172,7 @@ public class ClientManager extends PlayerManager<Client> {
         // We don't do the same for loading online clients (like when joining) because we want to
         // make sure that the client is always up-to-date for online people. If an offline client
         // logs on during its expiry time, it'll be overwritten with the new data.
-        final Optional<Client> storedUser = this.getStoredUser(searchStorageFilter);
+        final Optional<Client> storedUser = searchStorageFilter.get();
         if (storedUser.isPresent()) {
             callback.accept(storedUser);
             return;
@@ -164,66 +189,88 @@ public class ClientManager extends PlayerManager<Client> {
 
     @Override
     protected void loadOffline(String name, Consumer<Optional<Client>> clientConsumer) {
-        this.loadOffline(client -> client.getName().equalsIgnoreCase(name),
-                () -> this.redis.getClient(name).or(() -> this.sql.getClient(name)),
-                clientConsumer
-        );
+        if (this.redis.isEnabled()) {
+            this.loadOffline(() -> getStoredUser(client -> client.getName().equalsIgnoreCase(name)),
+                    () -> this.redisLayer.getClient(name).or(() -> this.sqlLayer.getClient(name)),
+                    clientConsumer
+            );
+        } else {
+            this.loadOffline(() -> getStoredUser(client -> client.getName().equalsIgnoreCase(name)),
+                    () -> this.sqlLayer.getClient(name),
+                    clientConsumer
+            );
+        }
     }
 
     @Override
     protected void loadOffline(UUID uuid, Consumer<Optional<Client>> clientConsumer) {
-        this.loadOffline(client -> client.getUniqueId().equals(uuid),
-                () -> this.redis.getClient(uuid).or(() -> this.sql.getClient(uuid)),
-                clientConsumer
-        );
+        if (this.redis.isEnabled()) {
+            this.loadOffline(() -> getStoredExact(uuid),
+                    () -> this.redisLayer.getClient(uuid).or(() -> this.sqlLayer.getClient(uuid)),
+                    clientConsumer
+            );
+        } else {
+            this.loadOffline(() -> getStoredExact(uuid),
+                    () -> this.sqlLayer.getClient(uuid),
+                    clientConsumer
+            );
+        }
+    }
+
+    protected Optional<Client> getStoredExact(UUID uuid) {
+        return Optional.ofNullable(this.store.getIfPresent(uuid));
     }
 
     @Override
     protected Optional<Client> getStoredUser(final Predicate<Client> predicate) {
-        final Optional<Client> found = this.store.asMap().keySet().stream().filter(predicate).findFirst();
-        found.ifPresent(this.store::refresh); // Refreshing the client's expiry time
+        final Optional<Client> found = this.store.asMap().values().stream().filter(predicate).findFirst();
+        found.ifPresent(this::load);
         return found;
     }
 
     @Override
     public Set<Client> getLoaded() {
-        return Collections.unmodifiableSet(this.store.asMap().keySet());
+        return Set.copyOf(this.store.asMap().values());
     }
 
     @Override
     public Set<Client> getOnline() {
-        return this.store.asMap().keySet().stream().filter(Client::isLoaded).collect(Collectors.toUnmodifiableSet());
+        return this.store.asMap().values().stream().filter(Client::isLoaded).collect(Collectors.toUnmodifiableSet());
     }
 
     @Override
     public void processStatUpdates(boolean async) {
-        this.sql.processStatUpdates(async);
+        this.sqlLayer.processStatUpdates(async);
     }
 
     @Override
     public void saveProperty(Client client, String property, Object value) {
         CompletableFuture.runAsync(() -> {
-            this.redis.save(client);
-            this.sql.saveProperty(client, property, value);
+            if (this.redis.isEnabled()) {
+                this.redisLayer.save(client);
+            }
+            this.sqlLayer.saveProperty(client, property, value);
         });
     }
 
     public void saveGamerProperty(Gamer gamer, String property, Object value) {
         CompletableFuture.runAsync(() -> {
             // no need to save to redis because gamers are not persistent across servers
-            this.sql.saveGamerProperty(gamer, property, value);
+            this.sqlLayer.saveGamerProperty(gamer, property, value);
         });
     }
 
     public void loadGamerProperties(Client client) {
-        this.sql.loadGamerProperties(client);
+        this.sqlLayer.loadGamerProperties(client);
     }
 
     @Override
     public void save(Client client) {
         CompletableFuture.runAsync(() -> {
-            this.redis.save(client);
-            this.sql.save(client);
+            if (this.redis.isEnabled()) {
+                this.redisLayer.save(client);
+            }
+            this.sqlLayer.save(client);
         });
     }
 
@@ -235,8 +282,12 @@ public class ClientManager extends PlayerManager<Client> {
      * @param uuid The UUID of the client that was updated.
      */
     protected void receiveUpdate(UUID uuid) {
+        if (!this.redis.isEnabled()) {
+            throw new IllegalStateException("Redis is not enabled.");
+        }
+
         // Attempt to get a loaded client with the same UUID.
-        final Optional<Client> client = this.getStoredUser(stored -> stored.getUniqueId().equals(uuid));
+        final Optional<Client> client = this.getStoredExact(uuid);
         if (client.isEmpty()) {
             // No client loaded with the same UUID, meaning we don't need to update anything
             // as the updates will be applied when the client is loaded.
@@ -245,7 +296,7 @@ public class ClientManager extends PlayerManager<Client> {
 
         // Otherwise, update
         final Client stored = client.get();
-        this.redis.getClient(uuid).ifPresent(stored::copy);
+        this.redisLayer.getClient(uuid).ifPresent(stored::copy);
     }
 }
 
